--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <button id="button-number" type="button" class="btn btn-primary">Lucky Number</button>
 <button id="button-name" type="button" class="btn btn-secondary">Name</button>
 <script type="module" src="app.js"></script>
+<p id='root'></p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
     
